# aligned_layer

common/: shared_types.go
operator/risc0/lib/: Cargo.toml  risc0.h  rust-toolchain
operator/risc0/lib/elf/: fibonacci
operator/risc0/lib/src/: lib.rs
task_generator/: task_generator.go
tests/testing_data/: risc0_fibonacci.proof
