[package]
name = "risc0-verifier-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", branch = "release-0.21" }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
